Set genre to OTHER if no TMDB genre is found